--- a/src/app/car-details/car-details.html
+++ b/src/app/car-details/car-details.html
@@ -70,10 +70,11 @@
           <span class="label">Warranty</span>
           <span class="value">{{ details.warranty }}</span>
         </div>
-          <!-- <div class="spec-card">
+          <div class="spec-card">
           <span class="label">Owner</span>
           <span class="value">{{ details.owners }}</span>
-        </div> -->
+        </div>
+        
       </div>
     </div>
 
