--- a/src/app/home/home.css
+++ b/src/app/home/home.css
@@ -6,17 +6,18 @@ header {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    height: 77.6vh;
+    height: 87.2vh;
 }
 
 
 .content {
     font-size: 2rem;
     margin: auto;
+    margin-left: 120px;
     max-width: 100%;
     animation-name: slide-in-left;
     animation-duration: 3s;
-    margin-top: 150px;
+    margin-top: 170px;
 }
 
 .content h1 {
