--- a/src/app/page-404/page-404.html
+++ b/src/app/page-404/page-404.html
@@ -1,3 +1,7 @@
-<h1>404: Page Not Found 🙃</h1>
-<p>We couldn't find what you were looking for. We have initiated a search for the term extracted from the URL.</p>
-
+<div class="page404">
+    <div class="container">
+        <h1>404: Page Not Found 🙃</h1>
+        <p>We couldn't find what you were looking for. We have initiated a search for the term extracted from the URL.
+        </p>
+    </div>
+</div>
