--- a/src/app/admin-book-appointment/admin-book-appointment.html
+++ b/src/app/admin-book-appointment/admin-book-appointment.html
@@ -99,6 +99,7 @@
           <td>{{apt.service}}</td>
           <td>{{apt.email}}</td>
           <td>{{apt.date}}</td>
+          <td>{{apt.time}}</td>
           <td>{{apt.message}}</td>
           <td>
             <span class="badge" [ngClass]="{
