--- a/src/app/contact-us/contact-us.html
+++ b/src/app/contact-us/contact-us.html
@@ -31,7 +31,7 @@
 
       <div class="info-item">
         <span>📞</span>
-        <div>+91 98765 43210</div>
+        <div>+91 88496 69921</div>
       </div>
 
       <div class="info-item">
@@ -77,3 +77,4 @@
   </div>
 
 </section>
+<app-footer></app-footer>
