--- a/src/app/about-us/about-us.html
+++ b/src/app/about-us/about-us.html
@@ -9,7 +9,7 @@
     </div>
   </section>
 
-  <section class="top-stats luxury-style">
+  <!-- <section class="top-stats luxury-style">
 
   <div class="stat-box">
     <h2>{{ clients | number }} +</h2>
@@ -20,6 +20,35 @@
 
   <div class="stat-box">
     <h2>{{ awards| number }} +</h2>
+    <p>Best Quality Awards</p>
+  </div>
+
+  <span class="stat-divider"></span>
+
+  <div class="stat-box">
+    <h2>{{ cars | number }} +</h2>
+    <p>Cars Sold</p>
+  </div>
+
+  <span class="stat-divider"></span>
+
+  <div class="stat-box">
+    <h2>{{ brands | number }} +</h2>
+    <p>Car Brands</p>
+  </div>
+
+</section> -->
+<section class="top-stats luxury-style">
+
+  <div class="stat-box">
+    <h2>{{ clients | number }} +</h2>
+    <p>Happy Customers</p>
+  </div>
+
+  <span class="stat-divider"></span>
+
+  <div class="stat-box">
+    <h2>{{ awards | number }} +</h2>
     <p>Best Quality Awards</p>
   </div>
 
