--- a/src/app/car-details/car-details.html
+++ b/src/app/car-details/car-details.html
@@ -98,6 +98,17 @@
       <button class="book-btn">Request For Booking</button>
     </div>
   </div>
+  <!-- <div class="quick-contact">
+  <button class="call-btn" (click)="callNow()">
+    📞 Call Now
+  </button>
+
+  <button class="whatsapp-btn" (click)="openWhatsApp()">
+    💬 WhatsApp
+  </button>
+</div> -->
+
+
 
   <div class="features">
     <h2>Highlights</h2>
